[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/default-font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/gui.gd" type="Script" id=2]
[ext_resource path="res://engine/swipeDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://engine/inputHandler.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/sprites/options_button.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 1 )

[node name="gui" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputHandler" parent="." instance=ExtResource( 4 )]

[node name="swipeDetector" parent="." instance=ExtResource( 3 )]
margin_top = 1080.0
margin_bottom = 1280.0

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 540.0
margin_top = 1080.0
margin_right = 720.0
margin_bottom = 1280.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="topDisplay" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label1" type="Label" parent="topDisplay"]
margin_right = 176.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "HEALTH: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="topDisplay"]
margin_left = 180.0
margin_right = 246.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "5.0"

[node name="label2" type="Label" parent="topDisplay"]
margin_left = 250.0
margin_right = 426.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "ACTION: "

[node name="action" type="Label" parent="topDisplay"]
margin_left = 430.0
margin_right = 518.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
text = "MOVE"

[node name="plantMenu" type="WindowDialog" parent="."]
visible = true
margin_left = 160.0
margin_top = 500.0
margin_right = 560.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="plantMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="plantMenu/VBoxContainer"]
margin_right = 357.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 5 )
text = "Select a feature for
developing your plant
into"

[node name="HBoxContainer" type="HBoxContainer" parent="plantMenu/VBoxContainer"]
margin_top = 109.0
margin_right = 357.0
margin_bottom = 144.0
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="spikes" type="Button" parent="plantMenu/VBoxContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 126.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "Spikes"

[node name="poison" type="Button" parent="plantMenu/VBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 226.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 7 )
text = "Poison"

[node name="arrows" type="Button" parent="plantMenu/VBoxContainer/HBoxContainer"]
margin_left = 230.0
margin_right = 326.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 8 )
text = "Arrows"
[connection signal="swipe" from="swipeDetector" to="." method="_on_swipeDetector_swipe"]
[connection signal="swipe_canceled" from="swipeDetector" to="." method="_on_swipeDetector_swipe_canceled"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="plantMenu/VBoxContainer/HBoxContainer/spikes" to="." method="_on_spikes_pressed"]
[connection signal="pressed" from="plantMenu/VBoxContainer/HBoxContainer/poison" to="." method="_on_poison_pressed"]
[connection signal="pressed" from="plantMenu/VBoxContainer/HBoxContainer/arrows" to="." method="_on_arrows_pressed"]
